# tetris

./: CMakeLists.txt
src/: ai.cpp  ai.h  direction.h  game.cpp  game.h  grid.cpp  grid.h  human.cpp  human.h  main.cpp  neural.cpp  neural.h  piece.cpp  piece.h  piecefactory.cpp  piecefactory.h  piecemanager.cpp  piecemanager.h  rendering.h  tetromino.h
src/neural/: gene.cpp  gene.h  genome.cpp  genome.h  neural.cpp  neural.h  neuron.h  outputs.h  pool.h  species.h
